2002-06-24  Zack Weinberg  <zack@codesourcery.com>

	* share/diagnostics/common.txt: Add entry for "dependency cycle".
	* qm/test/execution_engine.py (class ExecutionEngine): Implement
	dependency-cycle detection.

2002-06-21  Zack Weinberg  <zack@codesourcery.com>

	* qm/platform_unix.py: Use URL quoting convention (%xx) to escape
	single quotes.

2002-06-19  Zack Weinberg  <zack@codesourcery.com>

	* qm/xmlutil.py: Use xml.dom.minidom.getDOMImplementation() so
	that writexml() will work when xmlplus is installed.

2002-06-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (sequence_difference): Remove.
	(make_map_from_list): Likewise.
	(purge_keys): Likewise.
	* qm/test/file_database.py (FileDatabase._GetLabels): Use
	JoinLabels, not qm.label.join.
	* qm/test/share/dir.dtml: Remove insertion of "." before test name.

2002-06-13  Mark Mitchell  <mark@codesourcery.com>

	* qm/common.py (MethodShouldBeOverriddenError): Remove.
	* qm/test/qmtest.py: Handle NotImplementedError specially.
	* qm/test/share/messages/diagnostics.txt (not implemented): New
	error message.
	* qm/attachment.py: Use NotImplementedError, not
	MethodShouldBeOverriddenError.
	* qm/fields.py: Likewise.
	* qm/user.py: Likewise.
	* qm/test/command_thread.py: Likewise.
	* qm/test/database.py: Likewise.
	* qm/test/file_database.py: Likewise.
	* qm/test/resource.py: Likewise.
	* qm/test/result_stream.py: Likewise.
	* qm/test/target.py: Likewise.
	* qm/test/test.py: Likewise.

	* NEWS: Mention --version option.
	* qm/test/doc/reference.xml: Add --version description.
	* GNUmakefile.in: Fix typo in comment.
	* qm/cmdline.py (CommandParser.__init__): Do not raise exceptions
	on invalid input.
	* qm/common.py (program_name): Initialize it to 'None'.
	* qm/setup_path.py.in (major_version): New variable.
	(minor_version): Likewise.
	(release_version): Likewise.
	* qm/test/cmdline.py (QMTest.version_option_spec): New variable.
	(QMTest.global_options_spec): Add it.