@@ -1,3 +1,7 @@
+2002-06-28  Mark Mitchell  <mark@codesourcery.com>
+	
+	* qm/common.py (timegm): Remove.
+
 2002-06-24  Zack Weinberg  <zack@codesourcery.com>
 
 	* share/diagnostics/common.txt: Add entry for "dependency cycle".
